// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index renders component 1`] = `
<Memo(WithStyles(WindowWrapper))
  className="root-mock"
>
  <WithStyles(Card)
    className="card-mock"
  >
    <WithStyles(Grid)
      container={true}
      direction="row"
    >
      <WithStyles(CardMedia)
        className="icon-mock"
        image="test-file-stub"
      />
      <WithStyles(CardContent)
        className="content-mock"
      >
        <WithStyles(Typography)
          align="justify"
          gutterBottom={true}
          variant="body1"
        >
          Waiting for Zcash node.
        </WithStyles(Typography)>
        <Connect(Component) />
      </WithStyles(CardContent)>
    </WithStyles(Grid)>
  </WithStyles(Card)>
</Memo(WithStyles(WindowWrapper))>
`;

exports[`Index renders when bootstrapping 1`] = `
<Memo(WithStyles(WindowWrapper))
  className="root-mock"
>
  <WithStyles(Card)
    className="card-mock"
  >
    <WithStyles(Grid)
      container={true}
      direction="row"
    >
      <WithStyles(CardMedia)
        className="icon-mock"
        image="test-file-stub"
      />
      <WithStyles(CardContent)
        className="content-mock"
      >
        <WithStyles(Typography)
          align="justify"
          gutterBottom={true}
          variant="body1"
        >
          Launching node
        </WithStyles(Typography)>
        <Connect(Component) />
      </WithStyles(CardContent)>
    </WithStyles(Grid)>
  </WithStyles(Card)>
</Memo(WithStyles(WindowWrapper))>
`;
